# openapi.yaml
@@ -115,6 +115,12 @@ paths:
         "500": *a1
   /status:
     get:
+      parameters:
+        - in: query
+          name: pageNumber
+          schema:
+            $ref: "#/components/schemas/__schema0"
+          required: true
       responses:
         "200":
           content:
@@ -123,9 +129,18 @@ paths:
                 type: object
                 properties:
                   taskHistory:
-                    type: array
-                    items:
-                      $ref: "#/components/schemas/__schema12"
+                    type: object
+                    properties:
+                      values:
+                        type: array
+                        items:
+                          $ref: "#/components/schemas/__schema12"
+                      lenght:
+                        type: number
+                    required:
+                      - values
+                      - lenght
+                    additionalProperties: false
                   cpuTaskQueue:
                     type: array
                     items:
